--- a/B&B/makefile
+++ b/B&B/makefile
@@ -2,8 +2,8 @@ CC = g++
 DEBUG_FLAGS = -Wall -Wextra -g
 RESULT_BB = -DRESULT_B_B
 #SORT = -DSORT
-THREAD = -DTHREAD
-LTHREAD = -lpthread
+#THREAD = -DTHREAD
+#LTHREAD = -lpthread
 INITIAL = -DINITIAL
 BOUNDS = -DBOUND1 -DBOUND2
 CFLAGS = $(DEBUG_FLAGS) -std=c++11 -lrt -O3
